--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 <body>
 <div class="wrap">
-  <h1>Book Club Interest Ranking</h1>
+  <h1>February Book Club Nominations</h1>
   <p>Drag books from <strong>most interested</strong> (top) to <strong>least interested</strong> (bottom), then click Submit.</p>
 
   <div class="card">
